--- a/DiarizationGroundTruthTool/MainWindow.xaml
+++ b/DiarizationGroundTruthTool/MainWindow.xaml
@@ -14,7 +14,11 @@
         <DockPanel Height="30" DockPanel.Dock="Top" LastChildFill="False" Margin="5,0,0,5">
             <Button x:Name="btnRun" DockPanel.Dock="Left" Content="Run" Width="75" Margin="0,0,5,0" Click="btnRun_Click"/>
             <Button x:Name="btnStopAndExport" DockPanel.Dock="Left" Content="Stop &amp; Export" Margin="0,0,5,0" Padding="5,1" Click="btnStopAndExport_Click"/>
-            <Button x:Name="btnStopAndReset" DockPanel.Dock="Right" Content="Stop &amp; Reset" Margin="0,0,5,0" Padding="5,1" Click="btnStopAndReset_Click"/>
+            <Button x:Name="btnStop" DockPanel.Dock="Left" Content="Stop" Margin="0,0,5,0" Padding="5,1" Click="btnStop_Click"/>
+            <Button x:Name="btnExport" DockPanel.Dock="Left" Content="Export" Margin="0,0,5,0" Padding="5,1" Click="btnExport_Click"/>
+            <Button x:Name="btnResume" DockPanel.Dock="Left" Content="Resume" Margin="0,0,5,0" Padding="5,1" Click="btnResume_Click"/>
+            <TextBlock x:Name="txtProgress" TextWrapping="Wrap" Text="-" FontSize="20" FontFamily="Courier New" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="txtPressed" TextWrapping="Wrap" Text="Pressed numbers" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20"/>
         </DockPanel>
         <TextBox x:Name="txtDisp" Text="Diarization Ground Truth Tool" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsUndoEnabled="False" HorizontalScrollBarVisibility="Auto"/>
     </DockPanel>
