--- a/DiarizationGroundTruthTool/MainWindow.xaml
+++ b/DiarizationGroundTruthTool/MainWindow.xaml
@@ -15,6 +15,7 @@
             <Button x:Name="btnRun" DockPanel.Dock="Left" Content="Run" Width="75" Margin="0,0,5,0" Click="btnRun_Click"/>
             <Button x:Name="btnStopAndExport" DockPanel.Dock="Left" Content="Stop &amp; Export" Margin="0,0,5,0" Padding="5,1" Click="btnStopAndExport_Click"/>
             <Button x:Name="btnStopAndReset" DockPanel.Dock="Right" Content="Stop &amp; Reset" Margin="0,0,5,0" Padding="5,1" Click="btnStopAndReset_Click"/>
+            <TextBlock x:Name="txtProgress" Height="30" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
         </DockPanel>
         <TextBox x:Name="txtDisp" Text="Diarization Ground Truth Tool" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsUndoEnabled="False" HorizontalScrollBarVisibility="Auto"/>
     </DockPanel>
