Audio player implemented. TODO: FLAC support

--- a/DiarizationGroundTruthTool/MainWindow.xaml
+++ b/DiarizationGroundTruthTool/MainWindow.xaml
@@ -17,7 +17,7 @@
             <Button x:Name="btnStop" DockPanel.Dock="Left" Content="Stop" Margin="0,0,5,0" Padding="5,1" Click="btnStop_Click"/>
             <Button x:Name="btnExport" DockPanel.Dock="Left" Content="Export" Margin="0,0,5,0" Padding="5,1" Click="btnExport_Click"/>
             <Button x:Name="btnResume" DockPanel.Dock="Left" Content="Resume" Margin="0,0,5,0" Padding="5,1" Click="btnResume_Click"/>
-            <Button x:Name="btnOpen" DockPanel.Dock="Left" Content="Open" Margin="0,0,5,0" Padding="5,1" Click="btnOpen_Click"/>
+            <Button x:Name="btnOpen" DockPanel.Dock="Left" Content="Open an Audio File" Margin="0,0,5,0" Padding="5,1" Click="btnOpen_Click"/>
             <TextBlock x:Name="txtPressed" TextWrapping="Wrap" Text="Pressed numbers" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20"/>
         </DockPanel>
         <TextBox x:Name="txtDisp" Text="Diarization Ground Truth Tool" VerticalScrollBarVisibility="Auto" IsReadOnly="True" IsUndoEnabled="False" HorizontalScrollBarVisibility="Auto"/>
